# shine-MSVC

./: CMakeLists.txt  libshine.def  shine.rc.in  shine_msvc.pc.in
src/lib/: l3mdct.c  l3subband.c
